--- a/src/views/archivos/nuevoArchivo.hbs
+++ b/src/views/archivos/nuevoArchivo.hbs
@@ -28,6 +28,8 @@
                 <div>
                     <textarea name="description" class="form-control" placeholder="Descripción"></textarea>
                 </div>
+                Archivo Digital: <br/>
+                <input type="file" name="digital" id="digital" />
                 <div class="form-group mt-4">
                     <div class="radio-inline">
                         <label>
